# Reliquary

./: .gitignore  CMakeLists.txt  PLAN.md  RELEASE_NOTES.md  release.sh
.github/workflows/: release.yml
assets/32rogues/: animals.txt  items-pallete-swaps.txt  rogues.txt  tiles.txt
data/: dungeons.json
data/maps/: overworld.map  thornwall.map
src/: main.cpp
src/components/: ai.h  background.h  blocker.h  buff.h  class_def.h  container.h  corpse.h  death_anim.h  disease.h  dynamic_quest.h  energy.h  god.h  inventory.h  item.h  npc.h  pet.h  player.h  prayer.h  quest.h  quest_target.h  renderable.h  sign.h  spellbook.h  stats.h  status_effect.h  tenet.h  traits.h
src/core/: audio.cpp  audio.h  ecs.h  engine.cpp  engine.h  rng.cpp  rng.h  spritesheet.cpp  spritesheet.h  tilemap.cpp  tilemap.h
src/data/: world_data.h
src/generation/: dungeon.cpp  dungeon.h  mapfile.cpp  mapfile.h  overworld.cpp  overworld.h  player_setup.cpp  player_setup.h  populate.cpp  populate.h  quest_gen.cpp  quest_gen.h  village.cpp  village.h
src/save/: meta.cpp  meta.h  save.cpp  save.h
src/systems/: ai.cpp  ai.h  combat.cpp  combat.h  fov.cpp  fov.h  god_system.cpp  god_system.h  magic.cpp  magic.h  npc_interaction.cpp  npc_interaction.h  particles.cpp  particles.h  render.cpp  render.h  status.cpp  status.h
src/ui/: background_select.cpp  background_select.h  character_sheet.cpp  character_sheet.h  creation_screen.cpp  creation_screen.h  death_screen.cpp  death_screen.h  help_screen.cpp  help_screen.h  inventory_screen.cpp  inventory_screen.h  levelup_screen.cpp  levelup_screen.h  main_menu.cpp  main_menu.h  message_log.cpp  message_log.h  pause_menu.cpp  pause_menu.h  quest_log.cpp  quest_log.h  quest_offer.cpp  quest_offer.h  settings_screen.cpp  settings_screen.h  shop_screen.cpp  shop_screen.h  spell_screen.cpp  spell_screen.h  (+6 more)
tests/: test_data_integrity.cpp
tools/: generate_overworld.py  mingw-toolchain.cmake  package-release.sh
